Add permissions to commands

--- a/plugin.yml
+++ b/plugin.yml
@@ -2,3 +2,8 @@ name: FakePlayer
 main: muqsit\fakeplayer\Loader
 api: 4.0.0
 version: 0.1.4
+
+permissions:
+  fakeplayer.command.fp:
+    description: "Control fake player"
+    default: op
